[setup.py] configure PEP517/518 build system

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,7 @@ sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"
 
 [tool.black]
 line-length = 88
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
