--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ force_sort_within_sections = true
 
 # Designate "pelican" as separate import section
 known_pelican = "pelican"
+known_first_party = "minchin"
 sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"
 
 [tool.black]
